--- a/static/css/colors/red.css
+++ b/static/css/colors/red.css
@@ -1,17 +1,20 @@
-$primary-color: #86A438;
-
+/**
+ * WEBSITE: https://themefisher.com
+ * TWITTER: https://twitter.com/themefisher
+ * FACEBOOK: https://www.facebook.com/themefisher
+ * GITHUB: https://github.com/themefisher/
+ */
 
 /*
  * Selection color
  */
 ::-moz-selection {
-  	background-color: $primary-color;
+  background-color: #FA6862;
 }
 
 ::selection {
-  	background-color: $primary-color;
+  background-color: #FA6862;
 }
-
 
 /* background color */
 .btn-primary,
@@ -21,13 +24,12 @@ $primary-color: #86A438;
 .hexagon-item:hover .hex-item div::after,
 .progress .bar,
 .contact-social li:hover span {
-  	background-color: $primary-color;
+  background-color: #FA6862;
 }
 
 .nicescroll-cursors {
-  	background: $primary-color !important;
+  background: #FA6862 !important;
 }
-
 
 /* color */
 .primary,
@@ -35,31 +37,31 @@ $primary-color: #86A438;
 .filter .active,
 .works-item h4,
 .msg-success {
-  	color: $primary-color;
+  color: #FA6862;
 }
-
 
 /* border color */
 .testimonials .owl-dot.active {
-  	border-color: $primary-color;
+  border-color: #FA6862;
 }
 
 /* border top color */
 .site-wrapper,
 .contact-social li:hover span::after,
 .contact-social-hex:hover::before {
-  	border-top-color: $primary-color;
+  border-top-color: #FA6862;
 }
 
 /* border bottom color */
 .filter .active,
 .contact-social li:hover span::before,
 .contact-social-hex:hover::after {
-  	border-bottom-color: $primary-color;
+  border-bottom-color: #FA6862;
 }
 
 /* fill color */
 .service-hex:hover .fill,
 .service-hex:hover .st1 {
-  	fill: $primary-color;
+  fill: #FA6862;
 }
+/*# sourceMappingURL=red.css.map */
