added some updates

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -1,31 +1,10 @@
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
-<!-- 
-THEME: Phantom - Bootstrap Portfolio Template
-VERSION: 1.0.0
-AUTHOR: Themefisher
-
-HOMEPAGE: https://themefisher.com/products/phantom-best-bootstrap-portfolio-template/
-DEMO: https://demo.themefisher.com/phantom/
-GITHUB: https://github.com/themefisher/Phantom-Bootstrap-Portfolio-Template
-
-WEBSITE: https://themefisher.com
-TWITTER: https://twitter.com/themefisher
-FACEBOOK: https://www.facebook.com/themefisher
--->
-
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
 
   <!-- ** Basic Page Needs ** -->
   <meta charset="utf-8">
-  <title>Phantom - Bootstrap Portfolio Template</title>
+  <title>Abbos - Portfolio Website</title>
 
   <!-- ** Mobile Specific Metas ** -->
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,20 +18,20 @@ FACEBOOK: https://www.facebook.com/themefisher
 
   <!-- Essential Stylesheets -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-  <link rel="stylesheet" href="../static/plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="../static/plugins/animate.css">
-  <link rel="stylesheet" href="../static/plugins/slick/slick.css">
-  <link rel="stylesheet" href="../static/plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="../static/plugins/themefisher-fonts/css/themefisher-fonts.min.css">
+  <link rel="stylesheet" href="../../static/plugins/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" href="../../static/plugins/animate.css">
+  <link rel="stylesheet" href="../../static/plugins/slick/slick.css">
+  <link rel="stylesheet" href="../../static/plugins/slick/slick-theme.css">
+  <link rel="stylesheet" href="../../static/plugins/themefisher-fonts/css/themefisher-fonts.min.css">
 
   <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="../../static/css/style.css">
   
   <!-- Theme Stylesheet -->
   <link rel="stylesheet" href="#" id="color-changer">
   
   <!--Favicon-->
-  <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
+  <link rel="icon" href="../../static/images/favicon.png" type="image/x-icon">
 
 </head>
 <body><!-- set class="dark" on body tag for DARK-THEME -->
@@ -84,14 +63,14 @@ FACEBOOK: https://www.facebook.com/themefisher
 
 <main class="site-wrapper">
   <div class="pt-table">
-    <div class="pt-tablecell page-home relative" style="background-image: url('../static/images/banner.jpg');">
+    <div class="pt-tablecell page-home relative" style="background-image: url('../../static/images/banner.jpg');">
       <div class="overlay"></div>
 
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title home text-center">
-              <img src="../static/images/phantom.png" alt="">
+              <img src="../../static/images/phantom.png" alt="">
               <p>A product designer from England, who focuses on interactive design &amp; A freelance designer focusing on typography &amp; clean interfaces. Also works in Google.</p>
             </div>
 
@@ -107,7 +86,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../portfolio/templates/welcome.html" class="hex-content">
+                <a href="../../theme/welcome.html" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-dial"></i>
@@ -133,7 +112,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div></div>
                   <div></div>
                 </div>
-                <a href="about.html" class="hex-content">
+                <a href="../../theme/about.html" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-profile-male"></i>
@@ -157,7 +136,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div></div>
                   <div></div>
                 </div>
-                <a href="services.html" class="hex-content">
+                <a href="../../theme/services.html" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-tools-2"></i>
@@ -181,7 +160,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div></div>
                   <div></div>
                 </div>
-                <a href="resume.html" class="hex-content">
+                <a href="../../theme/resume.html" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-tools"></i>
@@ -205,7 +184,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div></div>
                   <div></div>
                 </div>
-                <a href="works.html" class="hex-content">
+                <a href="../../theme/works.html" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-briefcase2"></i>
@@ -229,7 +208,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div></div>
                   <div></div>
                 </div>
-                <a href="testimonials.html" class="hex-content">
+                <a href="../../theme/testimonials.html" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-chat"></i>
@@ -253,7 +232,7 @@ FACEBOOK: https://www.facebook.com/themefisher
                   <div></div>
                   <div></div>
                 </div>
-                <a href="contact.html" class="hex-content">
+                <a href="../../theme/contact.html" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-envelope2"></i>
@@ -281,13 +260,13 @@ FACEBOOK: https://www.facebook.com/themefisher
 <!-- 
 Essential Scripts
 =====================================-->
-<script src="../static/plugins/jquery-2.2.4.min.js"></script>
-<script src="../static/plugins/bootstrap/bootstrap.min.js"></script>
-<script src="../static/plugins/jquery.nicescroll.min.js"></script>
-<script src="../static/plugins/isotope/isotope.pkgd.min.js"></script>
-<script src="../static/plugins/slick/slick.min.js"></script>
+<script src="../../static/plugins/jquery-2.2.4.min.js"></script>
+<script src="../../static/plugins/bootstrap/bootstrap.min.js"></script>
+<script src="../../static/plugins/jquery.nicescroll.min.js"></script>
+<script src="../../static/plugins/isotope/isotope.pkgd.min.js"></script>
+<script src="../../static/plugins/slick/slick.min.js"></script>
 
-<script src="../static/js/script.js"></script>
+<script src="../../static/js/script.js"></script>
 
 </body>
 </html>
