added some updates

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -4,15 +4,17 @@
 {% block root %}
 <main class="site-wrapper">
   <div class="pt-table">
-    <div class="pt-tablecell page-home relative" style="background-image: url('../../static/images/banner.jpg');">
+    <div class="pt-tablecell page-home relative" style="background-image: url('{% static "images/banner.jpg" %}');">
       <div class="overlay"></div>
 
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title home text-center">
-              <img src="../../static/images/phantom.png" alt="">
-              <p>A product designer from England, who focuses on interactive design &amp; A freelance designer focusing on typography &amp; clean interfaces. Also works in Google.</p>
+              <img src="{% static 'images/Abbos.png' %}" alt="There is a logo" width="700" height="280">
+              <p>a python backend developer from Uzbekistan who is proficient in both Django and Django REST framework.
+                  My passion lies in learning about the latest technologies and up-to-date informations about IT.
+                  I have 1 + years of experience in this field.</p>
             </div>
 
             <div class="hexagon-menu clear">
@@ -27,7 +29,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../../theme/welcome.html" class="hex-content">
+                <a href="{% url 'welcome' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-dial"></i>
