added new phonto of me

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -11,7 +11,7 @@
         <div class="row">
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title home text-center">
-              <img src="{% static 'images/Abbos.png' %}" alt="There is a logo" width="700" height="280">
+              <img src="{% static 'images/Abbos_logoyim.png' %}" alt="There is a logo" >
               <p>a python backend developer from Uzbekistan who is proficient in both Django and Django REST framework.
                   My passion lies in learning about the latest technologies and up-to-date informations about IT.
                   I have 1 + years of experience in this field.</p>
