--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -55,7 +55,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../../theme/about.html" class="hex-content">
+                <a href="{% url 'about' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-profile-male"></i>
