added services page

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -79,7 +79,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../../theme/services.html" class="hex-content">
+                <a href="{% url 'services' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-tools-2"></i>
