added some siklls

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -47,9 +47,9 @@
             <div class="skill-wrapper">
               <div class="progress clear">
                 <div class="skill-name">{{ skill.name }}</div>
-                <div class="skill-bar">
-                  <div class="bar"></div>
-                </div>
+{#                <div class="skill-bar">#}
+{#                  <div class="bar"></div>#}
+{#                </div>#}
                 <div class="skill-lavel" data-skill-value=""></div>
               </div> <!-- /.progress -->
             </div> <!-- /.skill-wrapper -->
