added some informations

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -103,7 +103,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../../theme/resume.html" class="hex-content">
+                <a href="{% url 'resume' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-tools"></i>
@@ -127,7 +127,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../../theme/works.html" class="hex-content">
+                <a href="{% url 'works' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-briefcase2"></i>
@@ -151,7 +151,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../../theme/testimonials.html" class="hex-content">
+                <a href="{% url 'testimonials' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-chat"></i>
@@ -175,7 +175,7 @@
                   <div></div>
                   <div></div>
                 </div>
-                <a href="../../theme/contact.html" class="hex-content">
+                <a href="{% url 'contact' %}" class="hex-content">
                   <span class="hex-content-inner">
                     <span class="icon">
                       <i class="tf-envelope2"></i>
