--- a/portfolio/templates/resume.html
+++ b/portfolio/templates/resume.html
@@ -1,84 +1,7 @@
-<!--
- // WEBSITE: https://themefisher.com
- // TWITTER: https://twitter.com/themefisher
- // FACEBOOK: https://www.facebook.com/themefisher
- // GITHUB: https://github.com/themefisher/
--->
-
-<!-- 
-THEME: Phantom - Bootstrap Portfolio Template
-VERSION: 1.0.0
-AUTHOR: Themefisher
-
-HOMEPAGE: https://themefisher.com/products/phantom-best-bootstrap-portfolio-template/
-DEMO: https://demo.themefisher.com/phantom/
-GITHUB: https://github.com/themefisher/Phantom-Bootstrap-Portfolio-Template
-
-WEBSITE: https://themefisher.com
-TWITTER: https://twitter.com/themefisher
-FACEBOOK: https://www.facebook.com/themefisher
--->
-
-<!DOCTYPE html>
-<html lang="zxx">
-<head>
-
-  <!-- ** Basic Page Needs ** -->
-  <meta charset="utf-8">
-  <title>Phantom - Bootstrap Portfolio Template</title>
-
-  <!-- ** Mobile Specific Metas ** -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="description" content="Portfolio HTML Template">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
-  <meta name="author" content="Themefisher">
-  <meta name="generator" content="Themefisher Html5 Portfolio Template v1.0">
-
-  <!-- Essential Stylesheets -->
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400i|Open+Sans:400,600,700,800">
-  <link rel="stylesheet" href="../static/plugins/bootstrap/bootstrap.min.css">
-  <link rel="stylesheet" href="../static/plugins/animate.css">
-  <link rel="stylesheet" href="../static/plugins/slick/slick.css">
-  <link rel="stylesheet" href="../static/plugins/slick/slick-theme.css">
-  <link rel="stylesheet" href="../static/plugins/themefisher-fonts/css/themefisher-fonts.min.css">
-
-  <!-- Main Stylesheet -->
-  <link rel="stylesheet" href="../static/css/style.css">
-  
-  <!-- Theme Stylesheet -->
-  <link rel="stylesheet" href="#" id="color-changer">
-  
-  <!--Favicon-->
-  <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
-
-</head>
-<body><!-- set class="dark" on body tag for DARK-THEME -->
-
-  <div class="preloader">
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-    <div class="loading-mask"></div>
-  </div>
-
-  <div class="preview-wrapper">
-    <div class="switcher-head">
-      <span>Style Switcher</span>
-      <div class="switcher-trigger tf-tools"></div>
-    </div>
-
-    <div class="switcher-body">
-      <h4>Choose Color:</h4>
-      <ul class="color-options list-none">
-        <li class="c0" data-color="red" title="Default">Default</li>
-        <li class="c1" data-color="blue" title="Red">Red</li>
-        <li class="c2" data-color="green" title="Green">Green</li>
-        <li class="c3" data-color="yellow" title="Blue">Blue</li>
-      </ul>
-    </div>
-  </div>
-
+{% extends 'base.html' %}
+{% load static %}
+{% block title %}Resume page {% endblock %}
+{% block root %}
 <main class="site-wrapper">
   <div class="pt-table">
     <div class="pt-tablecell page-resume relative">
@@ -236,9 +159,8 @@ FACEBOOK: https://www.facebook.com/themefisher
       <nav class="page-nav clear">
   <div class="container">
     <div class="flex flex-middle space-between">
-      <span class="prev-page"><a href="services.html" class="link">&larr; Prev Page</a></span>
-      <span class="copyright">Copyright &copy; 2021, Designed &amp; Developed by <a href="https://themefisher.com/">Themefisher</a>.</span>
-      <span class="next-page"><a href="works.html" class="link">Next Page &rarr;</a></span>
+      <span class="prev-page"><a href="{% url 'services' %}" class="link">&larr; Prev Page</a></span>
+      <span class="next-page"><a href="{% url 'works' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
   <!-- /.page-nav -->
@@ -249,17 +171,4 @@ FACEBOOK: https://www.facebook.com/themefisher
   </div> <!-- /.pt-table -->
 </main> <!-- /.site-wrapper -->
 
-
-<!-- 
-Essential Scripts
-=====================================-->
-<script src="../static/plugins/jquery-2.2.4.min.js"></script>
-<script src="../static/plugins/bootstrap/bootstrap.min.js"></script>
-<script src="../static/plugins/jquery.nicescroll.min.js"></script>
-<script src="../static/plugins/isotope/isotope.pkgd.min.js"></script>
-<script src="../static/plugins/slick/slick.min.js"></script>
-
-<script src="../static/js/script.js"></script>
-
-</body>
-</html>
+{% endblock %}
