--- a/portfolio/templates/services.html
+++ b/portfolio/templates/services.html
@@ -50,7 +50,7 @@
   <div class="container">
     <div class="flex flex-middle space-between">
       <span class="prev-page"><a href="{% url 'about' %}" class="link">&larr; Prev Page</a></span>
-      <span class="next-page"><a href="resume.html" class="link">Next Page &rarr;</a></span>
+      <span class="next-page"><a href="{% url 'resume' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
   <!-- /.page-nav -->
