added some updates

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -29,7 +29,7 @@
                 <p><b>Language:</b> Uzbek, English</p>
                 <p><b>Expert in:</b> Web development</p>
                 <p><b>Team:</b> Available</p>
-                <p><b>Born:</b> Uzbekistan</p>
+                <p><b>Experience:</b> 1+ year</p>
               </div>
               <!-- /.author-desc -->
             </div> <!-- /.about-author -->
