--- a/portfolio/templates/resume.html
+++ b/portfolio/templates/resume.html
@@ -14,8 +14,7 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>My <span class="primary">history</span> <span class="title-bg">Resume</span></h2>
-              <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                laoreet dolore magna aliquam erat volutpat.</p>
+              <p>I was born in Yangikurgan Town, Uzbekistan, 21 September 2001.So about my all educations and experiences here : </p>
             </div>
           </div>
         </div> <!-- /.row -->
@@ -28,60 +27,17 @@
               </div>
               <!-- /.section-title -->
               <div class="history-scroller">
+                  {% for education in educations %}
                 <div class="history-item">
                   <div class="history-icon">
                     <span class="history-hex"></span>
                     <i class="tf-documents5"></i>
                   </div>
                   <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
+                    <h5>{{ education.name }}</h5>
+                    <span>{{ education.description|safe }}</span>
                   </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                    <p>Claritas est etiam processus dynamicus, qui <br> sequitur mutationem consuetudium lectorum.</p>
-                  </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                  </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                  </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                  </div>
+                    {% endfor %}
                 </div>
                 <!-- /.history-item -->
               </div>
@@ -94,60 +50,17 @@
               </div>
               <!-- /.section-title -->
               <div class="history-scroller">
+                  {% for experience in experiences %}
                 <div class="history-item">
                   <div class="history-icon">
                     <span class="history-hex"></span>
                     <i class="tf-documents5"></i>
                   </div>
                   <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
+                    <h5>{{ experience.name }}</h5>
+                    <span>{{ experience.description }}</span>
                   </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                    <p>Claritas est etiam processus dynamicus, qui <br> sequitur mutationem consuetudium lectorum.</p>
-                  </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                  </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                  </div>
-                </div>
-                <!-- /.history-item -->
-                <div class="history-item">
-                  <div class="history-icon">
-                    <span class="history-hex"></span>
-                    <i class="tf-documents5"></i>
-                  </div>
-                  <div class="history-text">
-                    <h5>Merin Land College</h5>
-                    <span>2012 - 2014</span>
-                  </div>
+                    {% endfor %}
                 </div>
                 <!-- /.history-item -->
               </div>
