added some updates

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -57,7 +57,8 @@
           </div> <!-- /.col -->
         </div> <!-- /.row -->
       </div> <!-- /.container -->
-
+        <a href="{% static 'resume.pdf' %}"></a>
+        <a href="{% static 'resume.pdf' %}" download>Download Resume</a>
       <nav class="page-nav clear">
   <div class="container">
     <div class="flex flex-middle space-between">
