--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -14,8 +14,8 @@
             <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
               <div class="page-title text-center">
                 <h2>Get in <span class="primary">touch</span> <span class="title-bg">Contact</span></h2>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut
-                  laoreet dolore magna aliquam erat volutpat.</p>
+                <p>If you want to talk to me about your projects or anything else, here are my contacts.
+                SO I try to answer you quickly !</p>
               </div>
             </div>
           </div> <!-- /.row -->
@@ -29,7 +29,7 @@
                   </div>
                   <div class="media-body">
                     <h4>Email</h4>
-                    <p><a href="mailto:my_name@gmail.com">my_name@gmail.com</a></p>
+                    <p><a href="mailto:my_name@gmail.com">abbosr180@gmail.com</a></p>
                   </div>
                 </div>
               </div>
@@ -41,7 +41,7 @@
                   </div>
                   <div class="media-body">
                     <h4>Phone</h4>
-                    <p><a href="tel:+000-1111-2222">+000-1111-2222</a></p>
+                    <p><a href="tel:+000-1111-2222">None</a></p>
                   </div>
                 </div>
               </div>
@@ -52,8 +52,8 @@
                     <i class="tf-mobile"></i>
                   </div>
                   <div class="media-body">
-                    <h4>Skype</h4>
-                    <p><a href="skype:my_name">my_name</a></p>
+                    <h4>Telegram</h4>
+                    <p><a href="https://t.me/theAbbosRasulov">this link</a></p>
                   </div>
                 </div>
               </div>
@@ -62,19 +62,23 @@
               <ul class="contact-social">
                 <li>
                   <span class="contact-social-hex"></span>
-                  <a href="www.fb.com/themefisher"><i class="tf-ion-social-facebook"></i></a>
+                  <a href="https://www.facebook.com/profile.php?id=100083361593238"><i class="tf-ion-social-facebook"></i></a>
                 </li>
+{#                <li>#}
+{#                  <span class="contact-social-hex"></span>#}
+{#                  <a href="https://twitter.com/"><i class="tf-ion-social-twitter"></i></a>#}
+{#                </li>#}
+{#                <li>#}
+{#                  <span class="contact-social-hex"></span>#}
+{#                  <a href="https://google.com/"><i class="tf-ion-social-google"></i></a>#}
+{#                </li>#}
                 <li>
                   <span class="contact-social-hex"></span>
-                  <a href="www.twitter.com/themefisher"><i class="tf-ion-social-twitter"></i></a>
+                  <a href="https://www.instagram.com/abbos__rasulov/"><i class="tf-ion-social-instagram"></i></a>
                 </li>
-                <li>
+                  <li>
                   <span class="contact-social-hex"></span>
-                  <a href="#"><i class="tf-ion-social-google"></i></a>
-                </li>
-                <li>
-                  <span class="contact-social-hex"></span>
-                  <a href="www.dribbble.com/themefisher"><i class="tf-ion-social-dribbble"></i></a>
+                  <a href="https://www.linkedin.com/in/abbos-rasulov/"><i class="tf-ion-social-linkedin"></i></a>
                 </li>
               </ul>
             </div>
