Added some updates

--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -53,7 +53,7 @@
                   </div>
                   <div class="media-body">
                     <h4>Telegram</h4>
-                    <p><a href="https://t.me/theAbbosRasulov">this link</a></p>
+                    <p style="color: #02b7ce" > <a href="https://t.me/theAbbosRasulov">this link</a></p>
                   </div>
                 </div>
               </div>
@@ -62,23 +62,19 @@
               <ul class="contact-social">
                 <li>
                   <span class="contact-social-hex"></span>
-                  <a href="https://www.facebook.com/profile.php?id=100083361593238"><i class="tf-ion-social-facebook"></i></a>
+                    <a href="https://github.com/abbos-rasulov"><i class="tf-ion-social-github"></i></a>
                 </li>
-{#                <li>#}
-{#                  <span class="contact-social-hex"></span>#}
-{#                  <a href="https://twitter.com/"><i class="tf-ion-social-twitter"></i></a>#}
-{#                </li>#}
-{#                <li>#}
-{#                  <span class="contact-social-hex"></span>#}
-{#                  <a href="https://google.com/"><i class="tf-ion-social-google"></i></a>#}
-{#                </li>#}
+                <li>
+                  <span class="contact-social-hex"></span>
+                   <a href="https://www.linkedin.com/in/abbos-rasulov/"><i class="tf-ion-social-linkedin"></i></a>
+                </li>
                 <li>
                   <span class="contact-social-hex"></span>
                   <a href="https://www.instagram.com/abbos__rasulov/"><i class="tf-ion-social-instagram"></i></a>
                 </li>
                   <li>
                   <span class="contact-social-hex"></span>
-                  <a href="https://www.linkedin.com/in/abbos-rasulov/"><i class="tf-ion-social-linkedin"></i></a>
+                 <a href="https://www.facebook.com/profile.php?id=100083361593238"><i class="tf-ion-social-facebook"></i></a>
                 </li>
               </ul>
             </div>
