--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -57,12 +57,11 @@
           </div> <!-- /.col -->
         </div> <!-- /.row -->
       </div> <!-- /.container -->
-        <a href="{% static 'resume.pdf' %}"></a>
-        <a href="{% static 'resume.pdf' %}" download>Download Resume</a>
       <nav class="page-nav clear">
   <div class="container">
     <div class="flex flex-middle space-between">
       <span class="prev-page"><a href="{% url 'welcome' %}" class="link">&larr; Prev Page</a></span>
+         <p style="color: #02b7ce" > <a href="{% static "Abbos Rasulov's Resume.pdf" %}" download>Download Resume</a></p>
       <span class="next-page"><a href="{% url 'services' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
