--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -40,7 +40,7 @@
                     <i class="tf-phone2"></i>
                   </div>
                   <div class="media-body">
-                    <h4>Phone</h4>
+                    <h4>Phone </h4>
                     <p><a href="tel:+000-1111-2222">None</a></p>
                   </div>
                 </div>
@@ -85,11 +85,12 @@
                 <span class="bar-primary"></span>
               </div>
 
-              <form id="contact-form" class="row contact-form no-gutter" action="#" method="post">
+              <form id="contact-form" class="row contact-form no-gutter" action="{% url 'contact' %}" method="post">
+                  {% csrf_token %}
                 <div class="col-xs-12 col-sm-6">
                   <div class="input-field name">
                     <span class="input-icon" id="name"><i class="tf-profile-male"></i></span>
-                    <input type="text" class="form-control" placeholder="Enter your name" required>
+                    <input type="text" class="form-control" name="name" placeholder="Enter your name" required>
                   </div>
                 </div> <!-- ./col- -->
                 <div class="col-xs-12 col-sm-6">
@@ -101,7 +102,7 @@
                 <div class="col-xs-12 col-sm-12">
                   <div class="input-field">
                     <span class="input-icon" id="subject"><i class="tf-pricetags"></i></span>
-                    <input type="text" class="form-control" name="subject" placeholder="Enter the discussion title" required>
+                    <input type="text" class="form-control" name="subject" placeholder="Enter your subject" required>
                   </div>
                 </div> <!-- ./col- -->
                 <div class="col-xs-12 col-sm-12">
