--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -53,7 +53,7 @@
                   </div>
                   <div class="media-body">
                     <h4>Telegram</h4>
-                    <p style="color: #02b7ce" > <a href="https://t.me/theAbbosRasulov">this link</a></p>
+                    <p style="color: #02b7ce" > <a href="https://t.me/theAbbosRasulov">@theAbbosRasulov</a></p>
                   </div>
                 </div>
               </div>
