added some updates

--- a/portfolio/templates/welcome.html
+++ b/portfolio/templates/welcome.html
@@ -19,9 +19,9 @@
             <div class="page-title">
               <h2>Abbos <span class="primary">Rasulov</span> <span class="title-bg">About</span></h2>
                 <h3>About myself:</h3>
-              <p> I am an experienced  data analyst from Uzbekistan with a huge interest in projects that require both creative and analytical thinking. And also I am a python backend developer who is proficient in both Django framework and Django REST framework. My passion lies in learning about the latest technologies and up-to-date informations about IT. By the way I have 1+ years of experience in this field .</p>
+              <p>I am Abbos from Uzbekistan and 22 years old an experienced  python backend developer who is proficient in both Django and Django REST framework. And also a data engineer with a huge interest in projects that require both creative and analytical thinking. My passion lies in learning about the latest technologies and up-to-date informations about IT. By the way I have 1 + years of experience in this field. </p>
                 <h3>Career summary :</h3>
-              <p>Motivated and fast-learning Data Scientist looking for an impactful role. As someone who was initially a self-taught programmer, I’ve always found ways to use programming to improve my work and have successfully done so in previous roles, primarily around automating daily operations and reporting. I’ve since joined a program to improve my programming skillset and have decided to pursue Data Scientist on a full-time basis.</p>
+              <p>Motivated and fast-learning django backend developer looking for an impactful role. As someone who was initially a self-taught programmer, I’ve always found ways to use programming to improve my work and have successfully done so in previous roles, primarily around automating daily operations and reporting. I’ve since joined a program to improve my programming skillset and have decided to pursue django backend developer on a full-time basis.</p>
             </div>
           </div>
         </div> <!-- /.row -->
