added some informations

--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -12,9 +12,8 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title home text-center">
               <img src="{% static 'images/Abbos_logoyim.png' %}" alt="There is a logo" >
-              <p>a python backend developer from Uzbekistan who is proficient in both Django and Django REST framework.
-                  My passion lies in learning about the latest technologies and up-to-date informations about IT.
-                  I have 1 + years of experience in this field.</p>
+              <p> an experienced python backend developer from Uzbekistan, 22 years old who is proficient in both Django and Django REST framework.
+                  </p>
             </div>
 
             <div class="hexagon-menu clear">
