Added some updates

--- a/portfolio/templates/about.html
+++ b/portfolio/templates/about.html
@@ -14,8 +14,7 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title text-center">
               <h2>About <span class="primary">me</span> <span class="title-bg">Name</span></h2>
-              <p>I have been working as a python backend developer since 2022. Worked in more than 10 live projects and
-                also with different clients! I like to challenge myself, pick up new knowledge and also good experience.Thus I am ready to help you with your matters !</p>
+              <p>My full name is Abbos Rasulov Minavarjon o'g'li and  was born in Yangikurgan Town, Uzbekistan, 21 September 2001. I really like to learn new knowledge in my field and I am in 3rd year in my university .</p>
             </div>
           </div>
 
@@ -33,15 +32,12 @@
               </div>
               <!-- /.author-desc -->
             </div> <!-- /.about-author -->
-            <p> I am an experienced  data analyst with a huge interest in projects that require both creative and
-                analytical thinking. And also I am a python backend developer who is proficient in both Django framework
-                and Django REST framework. My passion lies in learning about the latest
-                technologies and up-to-date informations about IT. By the way I have 1+ years of experience in this field.</p>
+            <p>Motivated and fast-learning django backend developer looking for an impactful role. As someone who was initially a self-taught programmer, I’ve always found ways to use programming to improve my work and have successfully done so in previous roles, primarily around automating daily operations and reporting. I’ve since joined a program to improve my programming skills and have decided to pursue django backend developer on a full-time basis.</p>
           </div> <!-- /.col -->
 
           <div class="col-xs-12 col-md-6">
             <div class="section-title clear">
-              <h3>Skills</h3>
+              <h3>Soft Skills</h3>
             </div>
             <div class="skill-wrapper">
               {% for skill in skills %}
