--- a/portfolio/templates/index.html
+++ b/portfolio/templates/index.html
@@ -12,7 +12,7 @@
           <div class="col-xs-12 col-md-offset-1 col-md-10 col-lg-offset-2 col-lg-8">
             <div class="page-title home text-center">
               <img src="{% static 'images/Abbos_logoyim.png' %}" alt="There is a logo" >
-              <p> an experienced python backend developer from Uzbekistan, 22 years old who is proficient in both Django and Django REST framework.
+              <p> an experienced python backend developer from Uzbekistan, who is proficient in both Django and Django REST framework.
                   </p>
             </div>
 
