--- a/portfolio/templates/services.html
+++ b/portfolio/templates/services.html
@@ -11,11 +11,8 @@
           <div class="col-xs-12 col-lg-offset-1 col-lg-10">
             <div class="page-title text-center">
               <h2>Awesome <span class="primary">Services</span> <span class="title-bg">Services</span></h2>
-              <p>I am (actually with my team) a web developer is a kind of programmer who specializes in the development of applications
-                  relating to the World Wide Web or distributed network applications, which typically run protocols like
-                  HTTP from a Web server to a client browser using associated programming languages like HTML/CSS, C#, Ruby and PHP to name a few
-                  . A Web developer is usually concerned with the back end or the programming aspect of creating a website or Web application and is not to be confused with a
-                  Web designer, who only deals with the aesthetics of a website or application, although many professionals have both skill sets.</p>
+              <p>I have been working as a python backend developer since 2022. Worked in more than 10 live projects and
+                also with different clients! I like to challenge myself, pick up new knowledge and also good experience.Thus me and my team are ready to help you with your projects. Below are our services!</p>
             </div>
 
             <div class="hexagon-menu services clear">
