--- a/portfolio/templates/contact.html
+++ b/portfolio/templates/contact.html
@@ -130,7 +130,7 @@
         <nav class="page-nav clear">
           <div class="container">
             <div class="flex flex-middle space-between">
-              <span class="prev-page"><a href="{% url 'testimonials' %}" class="link">&larr; Prev Page</a></span>
+              <span class="prev-page"><a href="{% url 'team' %}" class="link">&larr; Prev Page</a></span>
             </div>
           </div>
           <!-- /.page-nav -->
