--- a/portfolio/templates/works.html
+++ b/portfolio/templates/works.html
@@ -90,7 +90,7 @@
   <div class="container">
     <div class="flex flex-middle space-between">
       <span class="prev-page"><a href="{% url 'resume' %}" class="link">&larr; Prev Page</a></span>
-      <span class="next-page"><a href="{% url 'testimonials' %}" class="link">Next Page &rarr;</a></span>
+      <span class="next-page"><a href="{% url 'team' %}" class="link">Next Page &rarr;</a></span>
     </div>
   </div>
   <!-- /.page-nav -->
